--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,7 @@ services:
     name: resume-analyzer
     env: java
     buildCommand: "./mvnw clean install"
-    startCommand: "java -jar target/*.jar"
-    plan: free
-    branch: main
-    buildFilter:
-      paths:
-        - "src/**"
-        - "pom.xml"
+    startCommand: java -jar target/demo-0.0.1-SNAPSHOT.jar
+    envVars:
+      - key: JAVA_VERSION
+        value: 21
